--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ a {
     text-decoration: none;
 }
 
-.container{
+.container {
     max-width: 1280px;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
 
-.container-medium{
+.container-medium {
     max-width: 968px;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -47,7 +47,7 @@ a {
 
 /* HEADER */
 
-.header{
+.header {
     width: 100%;
     position: absolute;
     top: 0;
@@ -55,19 +55,19 @@ a {
     z-index: 100;
 }
 
-.nav{
+.nav {
     height: 3.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav-logo{
+.nav-logo {
     font-size: 1.12rem;
     color: var(--text-color);
 }
 
-.nav-toggle{
+.nav-toggle {
     display: inline-flex;
     font-size: 1.25rem;
     cursor: pointer;
@@ -75,21 +75,21 @@ a {
 }
 
 @media screen and (max-width:767px) {
-    .nav-menu{
+    .nav-menu {
         position: fixed;
         background-color: #000;
         width: 100%;
         height: 30%;
         top: -100%;
         left: 0;
-        box-shadow: rgba(99,99,99,0.3) 0px 1px 0px 0px;
+        box-shadow: rgba(99, 99, 99, 0.3) 0px 1px 0px 0px;
         z-index: 100;
         padding: 4rem 0 0 3rem;
         transition: .3s;
     }
 }
 
-.nav-close{
+.nav-close {
     font-size: 1.5rem;
     position: absolute;
     top: 1rem;
@@ -99,14 +99,14 @@ a {
 
 }
 
-.nav-list{
+.nav-list {
     display: flex;
     flex-direction: column;
     row-gap: 1.5rem;
     list-style: none;
 }
 
-.nav-link{
+.nav-link {
     color: var(--text-color);
     font-weight: 500;
     transition: .3s;
@@ -115,8 +115,31 @@ a {
     color: #FFFFFFB4;
 }
 
-.show-menu{
+.show-menu {
     top: 0;
     right: 0;
     transition: .3s;
+}
+
+/* HERO */
+
+.hero {
+    background-color: #111111;
+    position: relative;
+    z-index: -1;
+    padding: 6rem 0;
+    display: flex;
+    align-items: center;
+}
+
+.hero h1 {
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    background: -webkit-linear-gradient(360deg, rgba(252, 69, 106, 1) 0%, rgba(65, 96, 251, 1) 25%, rgba(75, 255, 141, 1) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
 }
